--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,12 +4,12 @@
         <nav class="my-2 my-md-0 mr-md-3">
             {% if user.is_authenticated %}
             Пользователь: {{ user.username }}.
-            <a class="p-2" href="{% url 'new_post' %}">Новая запись</a>
-            <a class="p-2" href="{% url 'password_change' %}">Изменить пароль</a>
-            <a class="p-2" href="{% url 'logout' %}">Выйти</a>
+            <a class="p-2 text-dark" style="text-decoration: none" href="{% url 'new_post' %}">Новая запись</a>
+            <a class="p-2 text-dark" style="text-decoration: none" href="{% url 'password_change' %}">Изменить пароль</a>
+            <a class="p-2 text-dark" style="text-decoration: none" href="{% url 'logout' %}">Выйти</a>
             {% else %}
-            <a class="p-2" href="{% url 'login' %}">Войти</a> |
-            <a class="p-2" href="{% url 'signup' %}">Регистрация</a>
+            <a class="p-2 text-dark" style="text-decoration: none" href="{% url 'login' %}">Войти</a> |
+            <a class="p-2 text-dark" style="text-decoration: none" href="{% url 'signup' %}">Регистрация</a>
             {% endif %}
         </nav>
     </div>
