--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "posts/base.html" %}
 {% block title %}Сброс пароля прошёл успешно{% endblock %}
 
 {% block content %}
