--- a/posts/templates/posts/group.html
+++ b/posts/templates/posts/group.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "posts/base.html" %}
 {% block title %} Записи сообщества {{ group.title }} {% endblock %}
 
 {% block content %}
